--- a/style.css
+++ b/style.css
@@ -4,10 +4,14 @@
     
     color: white;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+
 }
+html, body { height:100%; }
 body {
     background: rgb(2,0,36);
-background: linear-gradient(29deg, rgba(2,0,36,1) 0%, rgba(9,97,121,1) 62%, rgba(141,223,240,1) 100%);
+    background: linear-gradient(29deg, rgba(2,0,36,1) 0%, rgba(9,97,121,1) 62%, rgba(141,223,240,1) 100%);
+ 
+    /* height: 100%; */
 }
 h1 {
     color: white;
